<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Discount Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lblListedPrice">Listed Price</string>
    <string name="lblDiscountPct">Discount %</string>
    <string name="hintTxtListedPrice">Enter Listed Price</string>
    <string name="rad10Pct">10%</string>
    <string name="rad25Pct">25%</string>
    <string name="rad50Pct">50%</string>
    <string name="radCustomPct">Custom</string>
    <string name="lblCustomPercentValue">0%</string>
    <string name="lblUserSaves">You Saved</string>
    <string name="lblUserSavesValue">$0.00</string>
    <string name="lblUserPays">You Pay</string>
    <string name="btnExit">Exit</string>
    <string name="lblUserPaysValue">$0.00</string>

</resources>
